[package]
name = "ezing"
version = "0.1.0"
authors = ["Michael Fairley <michaelfairley@gmail.com>"]
description = "Easing functions"
repository = "https://github.com/michaelfairley/ezing"
keywords = ["gamedev", "math"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "michaelfairley/ezing", branch = "master" }

[dev-dependencies]
approx = "0.1"
glium = "0.16"
glium_text = "0.11"
glutin = "0.7"
